# Nagi_Games

Retro FPS/: Retro First Person Shooter.lnk
Retro FPS/Retro-First-Person-Shooter-Code-1-0-1-0/: Ammo.cpp  Ammo.h  CMakeLists.txt  Coin.cpp  Coin.h  Game.cpp  Game.h  Health.cpp  Health.h  Level.cpp  Level.h  Pickup.cpp  Pickup.h  Projectile.cpp  Projectile.h  SoundLoader.cpp  SoundLoader.h  Sprite.cpp  Sprite.h  Unit.cpp  Unit.h  UnitEnemy.cpp  UnitEnemy.h  UnitPlayer.cpp  UnitPlayer.h  UpgradeAmmo.cpp  UpgradeAmmo.h  UpgradeHealth.cpp  UpgradeHealth.h  UpgradeWeaponSpeed.cpp  UpgradeWeaponSpeed.h  Weapon.cpp  Weapon.h  main.cpp
Tarot cards/: .gitignore  GAME_DEVELOPMENT_ROADMAP.txt  OPTIMIZATION_PLAN.md  README.md  package-lock.json  package.json
Tarot cards/client/: index.html  package-lock.json  package.json
Tarot cards/client/public/: index.html
Tarot cards/client/src/: App.css  App.js  App.jsx  index.jsx
Tarot cards/client/src/components/: Navbar.js  TarotCard.js  TarotCard.test.js
Tarot cards/client/src/pages/: CardLibrary.js  History.jsx  Home.jsx  Reading.js
Tarot cards/client/src/services/: api.js
Tarot cards/docs/: API.md  CODE_REVIEW_REPORT.md  USER_MANUAL.md
Tarot cards/scripts/: package.js
Tarot cards/server/: package-lock.json  package.json
Tarot cards/server/src/: index.js
Tarot cards/server/src/database/: connection.js  init.js
Tarot cards/server/src/routes/: cards.js  readings.js  spreads.js
Tarot cards/server/src/services/: cardService.js  readingService.js  spreadService.js
Tarot cards/server/tests/: api.test.js  cardService.test.js
